Index Page Carousel Added

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,4 @@
-<div id='container'>
+<!-- <div id='container'>
   <h1 id='header'> Perspective </h1>
   <div id='view_plate'>
     <table>
@@ -10,6 +10,49 @@
         Enter to find Experience:
         <br>
         <input type="text" name="title" placeholder="Experience Title">
+        <input type="submit" value="Search it!">
+      </form>
+ </div> -->
+<!-- bootstrap -->
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner" role="listbox">
+    <div class="item active">
+      <center><img src="http://images4.fanpop.com/image/photos/22600000/Fall-beautiful-nature-22666764-900-562.jpg" alt="Enjoy the Experience of Expeditionists across the World"></center>
+      <div class="carousel-caption">
+        Percieve and Believe
+      </div>
+    </div>
+    <div class="item">
+      <center><img src="http://www.99holidays.com/uploads/1373971587bangkok_0.jpg" alt=""></center>
+      <div class="carousel-caption">
+        Expeditionist
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+ <div id='search_bar'>
+      <form action="/experience/:id" method="post">
+
+        <br>
+        <input type="text" name="title" placeholder="Experience">
         <input type="submit" value="Search it!">
       </form>
  </div>
