--- a/public/stylesheets/styling.css
+++ b/public/stylesheets/styling.css
@@ -14,3 +14,21 @@
 .list-group {
   text-align: center;
 }
+
+.row{
+  text-align: center;
+}
+
+.col-sm-6{
+  text-align: center;
+}
+
+.col-md-4{
+  text-align: center;
+}
+
+.thumbnail{
+  text-align: center;
+}
+
+
