--- a/app/views/expeditionist/view_expeditionists.erb
+++ b/app/views/expeditionist/view_expeditionists.erb
@@ -7,7 +7,7 @@
       <div class="caption">
         <h3><%=expeditionist.name%></h3>
         <h5><%=expeditionist.niche%></h5>
-        <p><a href="/expeditionist/<%=expeditionist.id%>/experiences" class="btn btn-primary" role="button">Experiences</a></p>
+        <p><a href="/expeditionist/<%=expeditionist.id%>/perspective" class="btn btn-primary" role="button">Experiences</a></p>
       </div>
     </div>
   </div>
