--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -33,10 +33,10 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
- <div id='search_bar'>
-      <form action="/experience/:id" method="post">
 
-        <br>
+ <div id='search_bar'>
+      <form action="/perspective/search" method="get">
+
         <input type="text" name="title" placeholder="Experience">
         <input type="submit" value="Search it!">
       </form>
