--- a/app/views/perspective/show_one.erb
+++ b/app/views/perspective/show_one.erb
@@ -1,4 +1,4 @@
-<h2><%= @cur_perspective %></h2>
+<h2><% @cur_perspective %></h2>
 <br><br>
 <h3><%= @cur_perspective.title %></h3>
 <p><%= @cur_perspective.content %></p>
