--- a/app/views/comment/new.erb
+++ b/app/views/comment/new.erb
@@ -1,4 +1,4 @@
-<h3>Add a Comment:</h3>
+<!-- <h3>Add a Comment:</h3>
 <form action= '/comments' method='post'>
   <input type='text' placeholder='title' name='title' />
   <input type='text' placeholder='content' name='content' />
@@ -6,3 +6,4 @@
 
   <input type='submit' value='Add' />
 </form>
+ -->
