--- a/app/views/perspective/show_one.erb
+++ b/app/views/perspective/show_one.erb
@@ -14,6 +14,8 @@
     </li>
     <% end %>
     <br>
+    <p><a href="/perspective/new">Share Perspective</a>
+
     <h3>Add a Comment:</h3>
 
   <form action= "/perspective/<%= @cur_perspective.id %>/comments" method='post'>
