Added body background image

--- a/public/stylesheets/styling.css
+++ b/public/stylesheets/styling.css
@@ -35,3 +35,7 @@
   text-align: center;
 }
 
+body {
+    background: url('http://cdn2.bigcommerce.com/server1500/8eaf0/product_images/uploaded_images/blowing-tree-wall-decal-1181.jpg');
+
+}
