--- a/app/views/comment/edit.erb
+++ b/app/views/comment/edit.erb
@@ -1,8 +1,30 @@
-<h3>Edit Comment:</h3>
-<form action= '/comment/<%= @cur_comment.id %>' method='post'>
+<h2 style='margin-left: 20px;'>Edit Comment:</h2>
+<h3 style='margin-left: 30px;'><%= @cur_comment.title %></h3>
+<!-- <form action= '/comment/<%= @cur_comment.id %>' method='post'>
   <input type='hidden' name='_method' value='put' />
   <input type='text' placeholder='title' name='title' />
   <input type='text' placeholder='content' name='content' />
 
   <input type='submit' value='Update' />
+</form> -->
+
+<form class="form-horizontal" action= '/comment/<%= @cur_comment.id %>' method='post'>
+  <input type='hidden' name='_method' value='put' />
+  <div class="form-group">
+    <label for="edit_title" class="col-sm-1 control-label">Title</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" id="inputEmail3" placeholder="Title" name='title'>
+    </div>
+  </div>
+  <div class="form-group">
+    <label for="edit_content" class="col-sm-1 control-label">Content</label>
+    <div class="col-sm-10">
+      <textarea cols="100" rows="10" class="form-control" id="inputPassword3" placeholder="Content" name='content'></textarea>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-1 col-sm-10">
+      <button type="submit" class="btn btn-default">Update</button>
+    </div>
+  </div>
 </form>
