--- a/app/views/experience/experiences.erb
+++ b/app/views/experience/experiences.erb
@@ -1,5 +1,5 @@
 <ul class="list-group">
   <%@experiences.each do |experience|%>
-  <li class="list-group-item"><a href='/perspective/<%=experience.id%>'><%=experience.title%></a></li>
+  <li class="list-group-item"><a href='/experience/<%=experience.id%>/perspectives'><%=experience.title%></a></li>
  <%end%>
 </ul>
