--- a/app/views/experience/experiences.erb
+++ b/app/views/experience/experiences.erb
@@ -1,3 +1,6 @@
+<div class="container">
+
+<h1>Experiences</h1>
 <ul class="list-group">
   <%@experiences.each do |experience|%>
   <li class="list-group-item"><a href='/experience/<%=experience.id%>/perspectives'><%=experience.title%></a></li>
