--- a/app/views/experience/experiences.erb
+++ b/app/views/experience/experiences.erb
@@ -1,8 +1,10 @@
 <div class="container">
-
-<h1>Experiences</h1>
-<ul class="list-group">
-  <%@experiences.each do |experience|%>
-  <li class="list-group-item"><a href='/experience/<%=experience.id%>/perspectives'><%=experience.title%></a></li>
- <%end%>
-</ul>
+  <div class="jumbotron">
+    <h1 style="text-align: center;">Experiences</h1>
+    <ul class="list-group">
+      <%@experiences.each do |experience|%>
+      <li class="perspective_list list-group-item"><a href='/experience/<%=experience.id%>/perspectives'><%=experience.title%></a></li>
+     <%end%>
+    </ul>
+  </div>
+</div>
