--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="/stylesheets/styling.css">
   <link rel="stylesheet" href="/stylesheets/login.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/stylesheets/styling.css">
 
 </head>
 <body>
@@ -14,9 +14,11 @@
     <% end%>
 
   </header>
+  <div class="container-fluid">
+    <%= yield %>
+  <a class="btn btn-info btn-sm" id="home_button" href="/" role="button">Home</a>
+  </div>
 
-  <%= yield %>
-  <a href='/'>Home</a>
 </div>
   <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
