styles share perspective page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -11,7 +11,7 @@
     <div class="item active">
       <center><a href='/experiences'><img src="http://images4.fanpop.com/image/photos/22600000/Fall-beautiful-nature-22666764-900-562.jpg" alt="Enjoy the Experience of Expeditionists across the World"></a></center>
       <div class="carousel-caption">
-        Percieve and Believe
+        Perceive and Believe
       </div>
     </div>
     <div class="item">
