--- a/app/views/perspective/show_one.erb
+++ b/app/views/perspective/show_one.erb
@@ -1,4 +1,10 @@
-<a class="btn btn-primary" href="/perspective/new" role="button">Share Perspective</a>
+<!-- <form action= "/perspective/new" method='get'>
+    <input
+    <button type="submit" class="btn btn-danger btn-xs">Share Perspective</button>
+</form> -->
+
+
+
 <h2><%= @cur_perspective.title %></h2>
 <p><%= @cur_perspective.content %></p>
 <ul class="comments">
