--- a/app/views/perspective/show_all.erb
+++ b/app/views/perspective/show_all.erb
@@ -9,5 +9,5 @@
     <% end%>
   </ul>
   <a class="btn btn-primary" href="/experience/<%= @perspectives.first.experience_id %>/perspective/new" role="button">Share Perspective</a>
+<a class="btn btn-primary" href="/perspective/new" role="button">Share Perspective</a>
 </div>
-
