Adds Code Review Comments

--- a/app/views/comment/edit.erb
+++ b/app/views/comment/edit.erb
@@ -1,5 +1,9 @@
 <h2 style='margin-left: 20px;'>Edit Comment:</h2>
 <h3 style='margin-left: 30px;'><%= @cur_comment.title %></h3>
+
+<!-- ZM: DO NOT LEAVE COMMENTED OUT CODE IN YOUR FILES --> 
+
+
 <!-- <form action= '/comment/<%= @cur_comment.id %>' method='post'>
   <input type='hidden' name='_method' value='put' />
   <input type='text' placeholder='title' name='title' />
